# ConfigHandler-python

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  config_handler.py  module_test.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  pytest-cov.yml  pytest.yml
config_handler/: __init__.py  __main__.py  _ui.py  advanced.py  ciphers.py  exceptions.py  info.py  simple.py
config_handler/_interactive/: __init__.py  create_new_config.py  open_config.py  utils.py
config_handler/advanced/: __init__.py
config_handler/advanced/compression/: __init__.py  lz4.py  zlib.py
config_handler/advanced/encryption/: __init__.py  aes256.py
config_handler/simple/: __init__.py
test/: test.py
tests/: test_advanced.py  test_compression.py  test_encryption.py  test_info.py  test_simple.py  test_ui.py
